# LinuxDrone

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  License.txt  LinuxDrone.sln  README.txt  build_rootfs.sh  configure.cmd  configure.sh  configure_rpi.cmd  configure_rpi.sh  osx-main-test.c
host-programs/c-host/: CMakeLists.txt  testConfig.json
host-programs/c-host/src/: main.c
libraries/ardu/: CMakeLists.txt
libraries/ardu/ldr/: CMakeLists.txt
libraries/ardu/ldr/AP_HAL_LDR/: AP_HAL_LDR.h  AP_HAL_LDR_Main.h  AP_HAL_LDR_Namespace.h  AP_HAL_LDR_Private.h  HAL_LDR_Class.cpp  HAL_LDR_Class.h  RCOutput_LDR.cpp  RCOutput_LDR.h
libraries/c-sdk/: CMakeLists.txt  CommonParamsGenerator.js  ModuleGenerator.js
libraries/c-sdk/include/: c-sdk.h  common-params.h  module-fuctions.h  module-functions.h  module.h  pru-functions.h
libraries/c-sdk/include/math/: matrix3.h  quaternion.h  vector3.h  vector4.h
libraries/c-sdk/src/: common-params.c  help-functions2.c  helper-functions.c  main.c  module-fuctions.c  module-functions.c  module.c  pru-functions.c
libraries/c-sdk/src/math/: matrix3.c  quaternion.c  vector3.c  vector4.c
libraries/c-sdk/tests/app1/: CMakeLists.txt  testConfig.json
libraries/dotnet-sdk/: CMakeLists.txt
libraries/dotnet-sdk/src/: CDotNetWrapper.cpp  CDotNetWrapper.h
libraries/gcs/: CMakeLists.txt
libraries/gcs/include/transport/: CTransport  CTransportNetwork  CTransportQueue  CTransportQueueXeno
libraries/gcs/include/uavobject/: CUAVObject  CUAVObjectField  UAVObjectManager
libraries/gcs/include/uavtalk/: UAVTalk
libraries/gcs/src/transport/: ctransport.cpp  ctransport.h  ctransportnetwork.cpp  ctransportnetwork.h  ctransportqueue.cpp  ctransportqueue.h  ctransportqueuexeno.cpp  ctransportqueuexeno.h
libraries/gcs/src/uavobject/: cuavobject.cpp  cuavobject.h  cuavobjectfield.cpp  cuavobjectfield.h  uavobjectmanager.cpp  uavobjectmanager.h
libraries/gcs/src/uavtalk/: uavtalk.cpp  uavtalk.h
libraries/sdk/: CMakeLists.txt  CommonParamsGenerator.js  ModuleGenerator.js  sdk.vcxproj
libraries/sdk/include/: apr-module-functions.h  module-functions.h
libraries/sdk/include/math/: matrix3.h  vector3.h
libraries/sdk/include/module/: CModule  CModuleMetaInfo  CModuleSystem
libraries/sdk/include/pru/: pru-functions.h
libraries/sdk/include/system/: CBus  CSerial  CSerialBus  CSerialFactory  CSerialUART  CSettings  CSystemBus  CSystemBusPool  CSystemI2C  CSystemPru
libraries/sdk/src/: apr-helper-functions.c  apr-module-functions.c  helper-functions.c  module-functions.c
libraries/sdk/src/math/: matrix3.c  quaternion-functions.c  quaternion.c  vector3.c
libraries/sdk/src/module/: CModule.cpp  CModule.h  CModuleMetaInfo.cpp  CModuleMetaInfo.h  CModuleSystem.cpp  CModuleSystem.h  cmodule.cpp  cmodulemetainfo.h  cmodulesystem.h
libraries/sdk/src/pru/: pru-functions.c
libraries/sdk/src/system/: CAbstractSerial.cpp  CAbstractSerial.h  CBus.cpp  CBus.h  CImplSerialRegular.cpp  CImplSerialRegular.h  CSerial.cpp  CSerial.h  CSerialBus.cpp  CSerialBus.h  CSerialFactory.cpp  CSerialFactory.h  CSerialUART.cpp  CSerialUART.h  CSettings.cpp  CSettings.h  CSystemBus.cpp  CSystemBus.h  CSystemBusPool.cpp  CSystemBusPool.h  CSystemI2C.cpp  cbus.h  (+6 more)
modules/SimpleTransform/: CMakeLists.txt  simpletransform.def.json
modules/SimpleTransform/src/: CSimpleTransform.cpp  CSimpleTransform.h
modules/ap-motors-matrix/: CMakeLists.txt  ap-motors-matrix.cpp  ap-motors-matrix.def.json
modules/ap-motors-quad/: CMakeLists.txt  ap-motors-quad.cpp  ap-motors-quad.def.json
modules/ardu/: CMakeLists.txt  ardu.c  ardu.cpp  ardu.def.json
modules/attitude/: CMakeLists.txt  attitude.cpp  attitude.def.json  attitude.h  quaternion-functions.h
modules/c-attitude/: CMakeLists.txt  c-attitude.c  c-attitude.cpp  c-attitude.def.json  c-attitude.h  quaternion-functions.c  quaternion-functions.h
modules/c-bmp180/: CMakeLists.txt  c-bmp180.c  c-bmp180.def.json  c-bmp180.h
modules/c-generator/: CMakeLists.txt  c-generator.c  c-generator.def.json  c-generator.h
modules/c-gy87/: CMakeLists.txt  c-gy87.c  c-gy87.def.json  c-gy87.h
modules/c-gy87/include/: c-gy87.h  c_gy87.helper.h  generated_code.h
modules/c-gy87/src/: c-gy87.c  c_gy87.helper.c  generated_code.c
modules/c-mpu9250/: CMakeLists.txt  c-mpu9250.c  c-mpu9250.def.json  c-mpu9250.h
modules/c-ms5611/: CMakeLists.txt  c-ms5611.c  c-ms5611.def.json  c-ms5611.h
modules/c-pid/: CMakeLists.txt  c-pid.c  c-pid.def.json  c-pid.h  pid.c  pid.h
modules/c-pru-pwmin/: BB-BONE-PRU-LD-00A0.dtbo  CMakeLists.txt  c-pru-pwmin.c  c-pru-pwmin.def.json  pru-pwmin.p
modules/c-pru-pwmout/: BB-BONE-PRU-LD-00A0.dts  CMakeLists.txt  c-pru-pwmout.c  c-pru-pwmout.def.json  pru-pwmout.p
modules/c-scale/: CMakeLists.txt  c-scale.c  c-scale.def.json  c-scale.h
modules/c-sum-scale/: CMakeLists.txt  c-sum-scale.c  c-sum-scale.def.json  c-sum-scale.h
modules/ms5611/: CMakeLists.txt  configure.json  ms5611.def.json
modules/ms5611/src/: cms5611.cpp  cms5611.h  cms5611meta.cpp  cms5611meta.h
modules/pid3x/: CMakeLists.txt  pid3x.def.json
modules/pid3x/src/: CPID3x.cpp  CPID3x.h
modules/rx-openlrs/: CMakeLists.txt  rx-openlrs.c  rx-openlrs.def.json
modules/short_terminator/: CMakeLists.txt  short_terminator.c  short_terminator.def.json
modules/test-receiver/: CMakeLists.txt  test-receiver.c  test-receiver.def.json
modules/test-receiver/include/: test_receiver.helper.h
modules/test-receiver/src/: test-receiver.c  test_receiver.helper.c
modules/test-sender/: CMakeLists.txt  test-sender.c  test-sender.def.json  test-sender.vcxproj
modules/test-sender-receiver/: CMakeLists.txt  test-sender-receiver.c  test-sender-receiver.def.json  test-sender-receiver.vcxproj
modules/test-sender-receiver/include/: test_sender_receiver.helper.h
modules/test-sender-receiver/src/: test-sender-receiver.c  test_sender_receiver.helper.c
modules/test-sender/include/: generated_code.h  test-sender.h  test_sender.helper.h
modules/test-sender/src/: generated_code.c  test-sender.c  test_sender.helper.c
(+368 files in other folders)
